added react mail sender

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viet Solution</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Giải pháp công nghệ thông tin chuyên nghiệp cho doanh nghiệp" />
+    <meta name="author" content="VietSolution" />
 
     <link rel="icon" href="public/favicon.svg" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="VietSolution cung cấp dịch vụ phát triển web, phân tích kinh doanh, marketing số và bảo mật mạng." />
   </head>
 
   <body>
     <div id="root"></div>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v22.0"></script>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
